<package format="2">
  <name>hello_pkg</name>
  <version>0.0.0</version>
  <description>The hello_pkg package</description>


  <maintainer email="bensydney13@gmail.com">Ben White</maintainer>


  <license>MIT</license>

  <author email="bensydney13@gmail.com">Ben White</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>
 
  </export>
</package>
